# wildberries-

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  composer.json  generation.yaml  pyproject.toml
clients/rust/analytics/: Cargo.toml
clients/rust/analytics/src/apis/: configuration.rs  csv_api.rs  default_api.rs
clients/rust/analytics/src/models/: _api_v2_nm_report_downloads_get_400_response.rs  _api_v2_nm_report_downloads_get_403_response.rs  _api_v2_nm_report_downloads_post_429_response.rs  _api_v2_nm_report_downloads_post_request.rs  _api_v2_search_report_product_orders_post_200_response.rs  _api_v2_search_report_product_search_texts_post_200_response.rs  _api_v2_search_report_report_post_200_response.rs  _api_v2_search_report_table_details_post_200_response.rs  _api_v2_search_report_table_groups_post_200_response.rs  _api_v2_stocks_report_offices_post_200_response.rs  _api_v2_stocks_report_products_groups_post_200_response.rs  _api_v2_stocks_report_products_products_post_200_response.rs  _api_v2_stocks_report_products_sizes_post_200_response.rs  common_info.rs  common_info_advertised_products.rs  common_info_supplier_rating.rs  common_product_filters.rs  common_report_filters.rs  common_response_properties.rs  common_shipping_office_filters.rs  common_size_filters.rs  comparison.rs  comparison_time_to_ready_dynamic.rs  comparison_wb_club_dynamic.rs  conversions.rs  date_period.rs  distribution_table_indicators.rs  distribution_table_indicators_feedback_count.rs  distribution_table_indicators_five_star.rs  distribution_table_indicators_four_star.rs  distribution_table_indicators_one_star.rs  distribution_table_indicators_three_star.rs  distribution_table_indicators_two_star.rs  distribution_table_item.rs  error_object.rs  error_object400.rs  error_object403.rs  feedbacks_increase_item.rs  feedbacks_increase_item_five_star.rs  feedbacks_increase_item_four_star.rs  (+147 more)
clients/rust/communications/: Cargo.toml
clients/rust/communications/src/apis/: configuration.rs  default_api.rs
clients/rust/communications/src/models/: _api_feedbacks_v1_pins_count_get_200_response.rs  _api_feedbacks_v1_pins_delete_200_response.rs  _api_feedbacks_v1_pins_get_200_response.rs  _api_feedbacks_v1_pins_limits_get_200_response.rs  _api_feedbacks_v1_pins_post_200_response.rs  _api_v1_claim_patch_400_response.rs  _api_v1_claim_patch_request.rs  _api_v1_claims_get_200_response.rs  _api_v1_claims_get_200_response_claims_inner.rs  _api_v1_claims_get_400_response.rs  _api_v1_feedback_get_200_response.rs  _api_v1_feedback_get_200_response_data.rs  _api_v1_feedback_get_200_response_data_answer.rs  _api_v1_feedback_get_200_response_data_photo_links_inner.rs  _api_v1_feedback_get_200_response_data_product_details.rs  _api_v1_feedback_get_200_response_data_video.rs  _api_v1_feedbacks_answer_patch_request.rs  _api_v1_feedbacks_answer_post_request.rs  _api_v1_feedbacks_archive_get_200_response.rs  _api_v1_feedbacks_archive_get_200_response_data.rs  _api_v1_feedbacks_count_get_200_response.rs  _api_v1_feedbacks_count_unanswered_get_200_response.rs  _api_v1_feedbacks_count_unanswered_get_200_response_data.rs  _api_v1_feedbacks_get_200_response.rs  _api_v1_feedbacks_get_200_response_data.rs  _api_v1_feedbacks_order_return_post_request.rs  _api_v1_new_feedbacks_questions_get_200_response.rs  _api_v1_new_feedbacks_questions_get_200_response_data.rs  _api_v1_new_feedbacks_questions_get_401_response.rs  _api_v1_new_feedbacks_questions_get_402_response.rs  _api_v1_question_get_200_response.rs  _api_v1_question_get_200_response_data.rs  _api_v1_question_get_200_response_data_answer.rs  _api_v1_question_get_200_response_data_product_details.rs  _api_v1_questions_count_get_200_response.rs  _api_v1_questions_count_unanswered_get_200_response.rs  _api_v1_questions_count_unanswered_get_200_response_data.rs  _api_v1_questions_get_200_response.rs  _api_v1_questions_get_200_response_data.rs  _api_v1_questions_get_200_response_data_questions_inner.rs  (+44 more)
clients/rust/finances/: Cargo.toml
clients/rust/finances/src/apis/: configuration.rs  default_api.rs
clients/rust/finances/src/models/: _api_v1_account_balance_get_200_response.rs  _api_v1_account_balance_get_401_response.rs  _api_v1_account_balance_get_402_response.rs  _api_v1_documents_list_get_400_response.rs  acquiring_report_list_req.rs  acquiring_report_list_res.rs  acquiring_reports_detailed_req.rs  acquiring_reports_detailed_res.rs  detail_report_item.rs  financial_reports_detailed_report_id_req.rs  get_categories.rs  get_categories_data.rs  get_categories_data_categories_inner.rs  get_doc.rs  get_doc_data.rs  get_docs.rs  get_docs_data.rs  get_list.rs  get_list_data.rs  get_list_data_documents_inner.rs  post_v1_sales_reports_list_400_response.rs  request_download.rs  request_download_params_inner.rs  sales_report_list_req.rs  sales_report_list_res.rs  sales_reports_detailed_req.rs  sales_reports_detailed_res.rs
clients/rust/in_store_pickup/: Cargo.toml
clients/rust/in_store_pickup/src/apis/: configuration.rs  default_api.rs
clients/rust/in_store_pickup/src/models/: _api_v3_click_collect_orders_new_get_401_response.rs  _api_v3_click_collect_orders_new_get_402_response.rs  api_batch_error.rs  api_batch_error_response.rs  api_check_identity_request.rs  api_checked_identity.rs  api_error.rs  api_gtin.rs  api_imei.rs  api_meta_error_response.rs  api_meta_set_response.rs  api_meta_set_responses.rs  api_new_order.rs  api_new_orders.rs  api_order.rs  api_order_client_info.rs  api_order_client_info_resp.rs  api_order_meta_v2.rs  api_order_status_v2.rs  api_order_statuses_v2.rs  api_orders.rs  api_orders_error_response.rs  api_orders_gtin_set_request.rs  api_orders_imei_set_request.rs  api_orders_meta_delete_request.rs  api_orders_meta_response.rs  api_orders_request.rs  api_orders_request_v2.rs  api_sgtins.rs  (+9 more)
clients/rust/orders_dbs/: Cargo.toml
clients/rust/orders_dbw/: Cargo.toml
clients/rust/orders_fbs/: Cargo.toml
clients/rust/orders_fbw/: Cargo.toml
clients/rust/products/: Cargo.toml
clients/rust/tariffs/: Cargo.toml
clients/rust/wbd/: Cargo.toml
(+5868 files in other folders)
