[package]
name = "wildberries_sdk_analytics"
version = "0.1.81"
authors = ["Evgenii Lazarev <elazarev@gmail.com>"]
description = "Wildberries OpenAPI client (generated)."
repository = "https://github.com/eslazarev/wildberries-sdk"
homepage = "https://github.com/eslazarev/wildberries-sdk"
documentation = "https://docs.rs/wildberries_sdk_analytics"
# Override this license by providing a License Object in the OpenAPI.
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
chrono = { version = "^0.4",  features = ["serde"] }
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
