[package]
name = "wildberries_sdk_products"
version = "0.1.92"
authors = ["Evgenii Lazarev <elazarev@gmail.com>"]
description = "Wildberries OpenAPI client (generated)."
repository = "https://github.com/eslazarev/wildberries-sdk"
homepage = "https://github.com/eslazarev/wildberries-sdk"
documentation = "https://docs.rs/wildberries_sdk_products"
# Override this license by providing a License Object in the OpenAPI.
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
chrono = { version = "^0.4",  features = ["serde"] }
tokio = { version = "^1.46.0", features = ["fs"] }
tokio-util = { version = "^0.7", features = ["codec"] }
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "stream", "query", "form"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
